[package]
name = "ical-rrule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
chrono = "0.4"
rand = "0.8"
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
insta = "1.8.0"

[features]
default = [] # only uncomment if needed - seems to break code coverage